[FIND-97] Fixed service view layout.
The bootstrap grid system was getting in the way of our custom side bar CSS. Removing the grid system prevents the horizontal scrollbar from appearing on the service views (especially the comparison view).

[rev: alyona.ivanova]

--- a/core/src/main/public/static/css/app-include.css
+++ b/core/src/main/public/static/css/app-include.css
@@ -1441,7 +1441,7 @@ input:-moz-placeholder::before {
     height: 60vh;
 }
 
-.document-detail-flex-container {
+.service-view-flex-container {
     display: flex;
     min-height: 100%;
 }
@@ -1602,13 +1602,6 @@ h4.similar-dates-message {
 
 .before-slider-div .slider.slider-horizontal .slider-track .slider-tick.round{
     opacity: 1;
-}
-
-@media (min-width: 980px) {
-    .flex-container {
-        display: flex;
-        min-height: 100%;
-    }
 }
 
 .precision-slider-block {
